<resources>
    <string name="app_name">NoteKar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Notes</string>
    <string name="second_fragment_label">Add Notes</string>
    <string name="third_fragment_label">Edit Notes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_submit">Submit</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_text">As Text</string>
    <string name="action_image">As Image</string>
    <string name="alert_action_message">Are you sure you want to %1$s this</string>
    <string name="cancel_success_message">You have cancelled this action successfully</string>
    <string name="delete_success_message">This item deleted this successfully</string>
    <string name="title_hint">Title</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="message_hint">Enter your message Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version:%1$s</string>
    <string name="permission_storage_msg">Please allow Storage permissions to proceed further.</string>
    <string name="permission_btn">Grant</string>


</resources>