<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.notekar.MainActivity">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="10"
        android:title="@string/action_submit"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="10"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="10"
        android:title="@string/action_cancel"
        android:icon="@drawable/ic_action_clear"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="10"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/text_color_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_text"
                    android:title="@string/action_text"
                    />
                <item
                    android:id="@+id/action_image"
                    android:title="@string/action_image"
                    />
            </group>
        </menu>
    </item>
</menu>